scrollbar fix

--- a/src/components/item/index.module.scss
+++ b/src/components/item/index.module.scss
@@ -79,7 +79,23 @@ margin-top: 80px;
 
       .recipeText {
         max-height: 150px;
-  overflow: auto;
+ 
+  overflow-y: auto;
+    scrollbar-width: thin;
+    scrollbar-color: #cd8c64 transparent;
+
+    &::-webkit-scrollbar {
+      width: 3px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: #d0b520;
+      border-radius: 3px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background-color: transparent;
+    }
   
   
 
